fixing header tittle position on mobile

--- a/main.css
+++ b/main.css
@@ -55,6 +55,8 @@ header nav li a {
 
 .header-img {
     width: 500px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 
